Fix HTML formatting and update image references

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
     <div class="gallery">
         <img src="Girlfriend1.jpg" alt="My Fav Pic Of You">
-        <img src="Girlfriend2.jpg" alt="Our First Raya Together">
-        <img src="Girlfriend3.jpg" alt="Your Fav Pic Of Me">
+        <img src="girlfriend2.jpg" alt="Our First Raya Together">
+        <img src="girlfriend3.jpg" alt="Your Fav Pic Of Me">
     </div>
 </div>
 
@@ -91,3 +91,4 @@
 
 </body>
 </html>
+
